MC-5405: Column Minimum Height Issues
- add max-width to column children to enable text wrapping and preventing children overflowing
- set min-height to column children to support 200px min-height config

--- a/app/code/Magento/PageBuilder/view/adminhtml/web/css/source/content-type/column/_default.less
+++ b/app/code/Magento/PageBuilder/view/adminhtml/web/css/source/content-type/column/_default.less
@@ -13,6 +13,8 @@
 
     > .element-children {
         flex: 1;
+        max-width: 100%;
+        min-height: auto;
         padding: 0;
     }
 }
